--- a/stories/fa/0001_مرد-خیلی-قد-بلند_slides.html
+++ b/stories/fa/0001_مرد-خیلی-قد-بلند_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>مرد خیلی قد بلند - Global African Storybook</title>
+  <title>مَردِ خِیلی قَد بُلَند - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="مرد-خیلی-قد-بلند" class="slide level1">
-<h1 dir="rtl">مرد خیلی قد بلند</h1>
+<h1 dir="rtl">مَردِ خِیلی قَد بُلَند</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
-<p dir="rtl">دسته ی بیل او بسیار کوتاه بود.</p>
+<p dir="rtl">دَستِه یِ بیلِ او بِسیار کوتاه بود.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p dir="rtl">در خانه اش خیلی پایین بود.</p>
+<p dir="rtl">دَرِ خانه اَش خِیلی پایین بود.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p dir="rtl">تختش خیلی کوتاه بود.</p>
+<p dir="rtl">تَختَش خِیلی کوتاه بود.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
-<p dir="rtl">دوچرخه اش خیلی کوتاه بود.</p>
+<p dir="rtl">دوچَرخه اَش خِیلی کوتاه بود.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
-<p dir="rtl">این مرد خیلی بلند قد بود!</p>
+<p dir="rtl">این مَرد خِیلی بُلَند قَد بود!</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
-<p dir="rtl">اون یک دسته ی بیل خیلی بلند برای خودش درست کرد.</p>
+<p dir="rtl">او یِک دَستِه یِ بیلِ خِیلی بُلَند بَرایِ خودَش دُرُست کَرد.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
-<p dir="rtl">اون یک چهارچوب در خیلی بلند ساخت.</p>
+<p dir="rtl">او یِک چَهارچوبِ خِیلی بُلَندِ دَرِساخت.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
-<p dir="rtl">اون یک تخت خیلی بلند ساخت.</p>
+<p dir="rtl">او یِک تَختِ خِیلی بُلَند ساخت.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
-<p dir="rtl">یک دوچرخه خیلی بلند خرید.</p>
+<p dir="rtl">یِک دوچَرخِهی خِیلی بُلَند خَرید.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
-<p dir="rtl">روی یک صندلی خیلی بلند نشست. با چنگال خیلی بلند غذا خورد.</p>
+<p dir="rtl">او روی یِک صَندَلی خِیلی بُلَند نِشَست. با چَنگال خِیلی بُلَند غَذا خورد.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p dir="rtl">اوخانه اش را ترک کرد و در یک جنگل بزرگ زندگی کرد. اون سالهای زیادی زندگی کرد.</p>
+<p dir="rtl">او خانهاَش را تَرک کَرد وَ در یِک جَنگَلِ بُزرگ زِندگی کَرد. او سالهایِ زیادی زِندگی کرد.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,7 +195,7 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" id="مرد-خیلی-قد-بلند-1">مرد خیلی قد بلند</h2>
+<h2 dir="rtl" id="مرد-خیلی-قد-بلند-1">مَردِ خِیلی قَد بُلَند</h2>
 <strong>Text:</strong> Cornelius Gulere<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
