--- a/stories/fa/0004_بزغاله،-سگ-و-گاو_slides.html
+++ b/stories/fa/0004_بزغاله،-سگ-و-گاو_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>بزغاله، سگ و گاو - Global African Storybook</title>
+  <title>بُزغاله، سَگ وَ گاو - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="بزغاله-سگ-و-گاو" class="slide level1">
-<h1 dir="rtl">بزغاله، سگ و گاو</h1>
+<h1 dir="rtl">بُزغاله، سَگ وَ گاو</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
-<p dir="rtl">بزغاله، سگ وگاو دوستان خوبی بودند. روزی آنها با تاکسی به مسافرت رفتند.</p>
+<p dir="rtl">بُزغاله، سَگ وَگاو دوستانِ خوبی بودَند. روزی آنها با تاکسی به مُسافِرَت رَفتَند.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
-<p dir="rtl">وقتی آنها به پایان سفرشان رسیدند، راننده از آنها خواست که کرایه شان را پرداخت کنند. گاو کرایه خودش را پرداخت.</p>
+<p dir="rtl">وَقتی آنها به پایانِ سَفَرِشان رِسیدند، رانَنده اَز آنها خواست که کِرایه شان را پَرداخت کُنَند. گاو کِرایه خودَش را پَرداخت کَرد.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
-<p dir="rtl">سگ کمی کرایه ی بیشتری داد، چون به همان اندازه پول نداشت.</p>
+<p dir="rtl">سَگ کَمی کِرایه یِ بیشتَری داد، چون بِه هَمان اَندازِه پول نَداشت.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
-<p dir="rtl">راننده قصد داشت پول سگ را به او بدهد وقتی که دید بزغاله بدون پرداخت ذره ای کرایه فرار کرد.</p>
+<p dir="rtl">رانَندِه قَصد داشت پولِ سَگ را بِه او بِدَهَد که دید بُزغالِه بِدون پَرداختِ ذَرّه ای کِرایه فَرار کَرد.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
-<p dir="rtl">راننده خیلی دلخور شد. بدون اینکه بقیه پول سگ را پس دهد رفت.</p>
+<p dir="rtl">رانَندِه خِیلی دِلخور شُد. بِدونِ اینکه بَقیهی پولِ سَگ را پَس دَهَد رَفت.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
-<p dir="rtl">به همین دلیل، حتی امروز، سگ به سمت ماشین دوید تا دزدکی به داخل ماشین نگاه کند و راننده ای را که به پول بدهکار بود را پیدا کند.</p>
+<p dir="rtl">بِه هَمین دَلیل، حَتی اِمروز، سَگ بِه سَمتِ ماشین دَوید تا دُزدَکی بِه داخِلِ ماشین نِگاه کُنَد وَ رانَندِه ای را کِه به او پول بِدِهکار بود را پِیدا کُنَد.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
-<p dir="rtl">بزغاله از صدای ماشین فرار کرد. او ترسید به خاطر کرایه ندادنش تحت تعقیب باشد.</p>
+<p dir="rtl">بُزغالِه اَز صِدایِ ماشین فَرار کَرد. او تَرسید به خاطِرِ کِرایه نَدادَنَش تَحتِ تَعقیب باشَد.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
-<p dir="rtl">گاو وقتی ماشینی می آمد اذیت نمی شد. گاو وقتش را صرف عبور از خیابان می کرد چون می دانست که او کرایه اش را کامل پرداخت کرده است.</p>
+<p dir="rtl">گاو وَقتی ماشینی میامَد اَذیَت نِمیشُد. گاو وَقتَش را صَرفِ عُبور اَز خیابان می کَرد چون میدانِست کِه او کِرایه اَش را کامِل پَرداخت کَردِه اَست.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" id="بزغاله-سگ-و-گاو-1">بزغاله، سگ و گاو</h2>
+<h2 dir="rtl" id="بزغاله-سگ-و-گاو-1">بُزغاله، سَگ وَ گاو</h2>
 <strong>Text:</strong> Fabian Wakholi<br> <strong>Illustrations:</strong> Marleen Visser<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
