--- a/stories/fa/0008_چه-کار-داری-میکنی‌؟.html
+++ b/stories/fa/0008_چه-کار-داری-میکنی‌؟.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>چه کار داری میکنی‌؟</title>
+    <title>چه کار داری می کُنی؟</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,62 +43,62 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
 
-<h1 dir="rtl" id="section">چه کار داری میکنی‌؟</h1>
+<h1 dir="rtl" id="section">چه کار داری می کُنی؟</h1>
 
 Nina Orange<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
 
-<p dir="rtl">من دارم آواز می‌خوانم.</p>
+<p dir="rtl">مَن دارَم آواز میخوانَم.</p>
 
 <div class="pagenum">1</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
 
-<p dir="rtl">او دارد دست تکان میدهد.</p>
+<p dir="rtl">او دارَد دَست تَکان میدهَد.</p>
 
 <div class="pagenum">2</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
 
-<p dir="rtl">من دارم دست میزنم.</p>
+<p dir="rtl">مَن دارَم دَست میزَنم.</p>
 
 <div class="pagenum">3</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
 
-<p dir="rtl">او خودش را کش میدهد.</p>
+<p dir="rtl">او خودَش را کِش میدَهَد.</p>
 
 <div class="pagenum">4</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
 
-<p dir="rtl">او صدا میزند.</p>
+<p dir="rtl">او صِدا میزَنَد.</p>
 
 <div class="pagenum">5</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
 
-<p dir="rtl">من پاسخ می‌دهم.</p>
+<p dir="rtl">مَن پاسُخ میدهَم.</p>
 
 <div class="pagenum">6</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
 
-<p dir="rtl">او گوش میدهد.</p>
+<p dir="rtl">او گوش میدهَد.</p>
 
 <div class="pagenum">7</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
 
-<p dir="rtl">تو داری چکار میکنی‌؟</p>
+<p dir="rtl">تو داری چِکار میکُنی؟</p>
 
 <div class="pagenum">8</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
