--- a/stories/fa/0008_چه-کار-داری-میکنی‌؟_slides.html
+++ b/stories/fa/0008_چه-کار-داری-میکنی‌؟_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>چه کار داری میکنی‌؟ - Global African Storybook</title>
+  <title>چه کار داری می کُنی؟ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="چه-کار-داری-میکنی" class="slide level1">
-<h1 dir="rtl">چه کار داری میکنی‌؟</h1>
+<section id="چه-کار-داری-می-کنی" class="slide level1">
+<h1 dir="rtl">چه کار داری می کُنی؟</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p dir="rtl">من دارم آواز می‌خوانم.</p>
+<p dir="rtl">مَن دارَم آواز میخوانَم.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p dir="rtl">او دارد دست تکان میدهد.</p>
+<p dir="rtl">او دارَد دَست تَکان میدهَد.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p dir="rtl">من دارم دست میزنم.</p>
+<p dir="rtl">مَن دارَم دَست میزَنم.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p dir="rtl">او خودش را کش میدهد.</p>
+<p dir="rtl">او خودَش را کِش میدَهَد.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p dir="rtl">او صدا میزند.</p>
+<p dir="rtl">او صِدا میزَنَد.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p dir="rtl">من پاسخ می‌دهم.</p>
+<p dir="rtl">مَن پاسُخ میدهَم.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p dir="rtl">او گوش میدهد.</p>
+<p dir="rtl">او گوش میدهَد.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p dir="rtl">تو داری چکار میکنی‌؟</p>
+<p dir="rtl">تو داری چِکار میکُنی؟</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" id="چه-کار-داری-میکنی-1">چه کار داری میکنی‌؟</h2>
+<h2 dir="rtl" id="چه-کار-داری-می-کنی-1">چه کار داری می کُنی؟</h2>
 <strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
