--- a/stories/fa/0009_گربه-ی-من-کجاست؟.html
+++ b/stories/fa/0009_گربه-ی-من-کجاست؟.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>گربه ی من کجاست؟</title>
+    <title>گُربِه یِ مَن کُجاست؟</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,62 +43,62 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/01.jpg" />
 
-<h1 dir="rtl" id="section">گربه ی من کجاست؟</h1>
+<h1 dir="rtl" id="section">گُربِه یِ مَن کُجاست؟</h1>
 
 Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/02.jpg" /></p>
 
-<p dir="rtl">گربه ی من کجاست؟</p>
+<p dir="rtl">گُربه یِ مَن کُجاست؟</p>
 
 <div class="pagenum">1</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/03.jpg" /></p>
 
-<p dir="rtl">آیا زیر تخت است؟</p>
+<p dir="rtl">آیا زیر تَخت اَست؟</p>
 
 <div class="pagenum">2</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/04.jpg" /></p>
 
-<p dir="rtl">آیا بالای قفسه است؟</p>
+<p dir="rtl">آیا بالایِ قَفَسِه اَست؟</p>
 
 <div class="pagenum">3</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
 
-<p dir="rtl">آیا پشت نیمکت است؟</p>
+<p dir="rtl">آیا پُشتِ نیمکَت اَست؟</p>
 
 <div class="pagenum">4</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
 
-<p dir="rtl">آیا کنار سطل است؟</p>
+<p dir="rtl">آیا کِنارِ سَطل اَست؟</p>
 
 <div class="pagenum">5</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
 
-<p dir="rtl">آیا داخل سبد است؟</p>
+<p dir="rtl">آیا داخِلِ سَبَد اَست؟</p>
 
 <div class="pagenum">6</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/08.jpg" /></p>
 
-<p dir="rtl">آیا بیرون از خانه است؟</p>
+<p dir="rtl">آیا بیرون اَز خانه اَست؟</p>
 
 <div class="pagenum">7</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/09.jpg" /></p>
 
-<p dir="rtl">! اینجاست</p>
+<p dir="rtl">اینجاست!</p>
 
 <div class="pagenum">8</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
