--- a/stories/fa/0027_تصمیم-گیری.html
+++ b/stories/fa/0027_تصمیم-گیری.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>تصمیم گیری</title>
+    <title>تَصمیم</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,118 +43,118 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/01.jpg" />
 
-<h1 dir="rtl" id="section">تصمیم گیری</h1>
+<h1 dir="rtl" id="section">تَصمیم</h1>
 
 Ursula Nafula<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
 
-<p dir="rtl">دهکده ی من مشکلات زیادی داشت. ما مجبور بودیم که برای برددن آب ازیک لوله در یک صف طولانی از یک لوله بایستیم.</p>
+<p dir="rtl">دِهکَده یِ مَن مُشکِلاتِ زیادی داشت. ما مَجبور بودیم کِه بَرایِ بُردَنِ آب اَزیِک لوله دَر یِک صَف طولانی بایستیم.</p>
 
 <div class="pagenum">1</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/03.jpg" /></p>
 
-<p dir="rtl">ما منتظر بخشش غذا از طرف دیگران بودیم.</p>
+<p dir="rtl">ما مُنتَظِرِ بَخششِ غَذا اَز طَرَفِ دیگران بودیم.</p>
 
 <div class="pagenum">2</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
 
-<p dir="rtl">ما در خانه هایمان را به خاطر دزدان زود قفل می کردیم.</p>
+<p dir="rtl">ما دَرِ خانههایِمان را بِه خاطِرِ دُزدان زود قُفل می کَردیم.</p>
 
 <div class="pagenum">3</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
 
-<p dir="rtl">خیلی از بچه ها از مدسه محروم می ماندند.</p>
+<p dir="rtl">خِیلی اَز بَچهها اَز مَدرِسه مَحروم میماندَند.</p>
 
 <div class="pagenum">4</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/06.jpg" /></p>
 
-<p dir="rtl">دختران جوان به عنوان پیشخدمت در روستاهای دیگر کار می کردند.</p>
+<p dir="rtl">دُختَرانِ جَوان به عُنوانِ پیشخِدمَت دَر روستاهایِ دیگر کار میکَردَند.</p>
 
 <div class="pagenum">5</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/07.jpg" /></p>
 
-<p dir="rtl">پسران جوان در اطراف دهکده پرسه می زدند در حالیکه دیگران روی زمین های کشاورزی دیگران کار می کردند.</p>
+<p dir="rtl">پِسَرانِ جَوان دَر اَطراف دِهکَدِه پَرسِه میزَدَند دَر حالیکِه دیگران رویِ زَمین هایِ کِشاوَرزیِ مَردُم کار میکَردَند.</p>
 
 <div class="pagenum">6</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/08.jpg" /></p>
 
-<p dir="rtl">وقتی که باد وزید، کاغذهای باطله روی درختان و حصارها آویزان می شدند.</p>
+<p dir="rtl">وَقتی که باد میوَزید، کاغَذهایِ باطِلِه رویِ دِرَختان وَ حِصارها آویزان میشُدَند.</p>
 
 <div class="pagenum">7</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
 
-<p dir="rtl">گاهی اوقات به خاطر خرده شیشه هایی که از روی بی احتیاطی روی زمین ریخته شده بود دست و پای مردم دچاربریدگی می شد.</p>
+<p dir="rtl">گاهی اوقات به خاطِر خُردِه شیشه هایی کِه اَز رویِ بی اِحتیاطی رویِ زَمین ریخته شُده بود دَست و پایِ مَردُم دُچارِبُریدگی میشُد.</p>
 
 <div class="pagenum">8</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
 
-<p dir="rtl">یک روز،آب لوله خشک شد و ظرفهای آب ما خالی ماند.</p>
+<p dir="rtl">یِک روز، آب لوله خُشک شُد وَ ظَرفهایِ آبِ ما خالی ماند.</p>
 
 <div class="pagenum">9</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
 
-<p dir="rtl">پدرم به تک تک خانه ها رفت و از مردم خواست که در جلسه ی دهکده شرکت کنند.</p>
+<p dir="rtl">پِدَرَم به تَک تَکِ خانه ها رَفت وَ اَز مَردُم خواست که دَر جَلسِه یِ دِهکَده شِرکَت کُنَند.</p>
 
 <div class="pagenum">10</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/12.jpg" /></p>
 
-<p dir="rtl">مردم زیریک درخت بزرگ جمع شدند وگوش کردند.</p>
+<p dir="rtl">مَردُم زیریِک دِرَختِ بُزُرگ جَمع شُدَند وَگوش کَردَند.</p>
 
 <div class="pagenum">11</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
 
-<p dir="rtl">پدرم ایستاد و گفت : ما نیاز داریم که با هم کار کنیم تا بتوانیم مشکلاتمان را حل کنیم.</p>
+<p dir="rtl">پِدَرَم ایستاد وَ گُفت: ما نیاز داریم که با هَم کار کُنیم تا بِتَوانیم مُشکِلاتِمان را حَل کُنیم.</p>
 
 <div class="pagenum">12</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
 
-<p dir="rtl">جومای هشت ساله، روی یک کنده ی درخت نشسته بود وداد زد : من میتوانم در نظافت کردن کمک کنم.</p>
+<p dir="rtl">جومایِ هَشت ساله، رویِ یِک کُنده یِ دِرَخت نِشَسته بود وَ داد زَد: مَن میتَوانَم دَر نِظافَت کَردَن کُمَک کُنَم.</p>
 
 <div class="pagenum">13</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/15.jpg" /></p>
 
-<p dir="rtl">یک خانم گفت : زن ها می توانند درکاشتن محصولات غذایی با من همراهی کنند.</p>
+<p dir="rtl">یِک خانُم گُفت: زَنها میتَوانَند دَرکاشتنِ مَحصولاتِ غَذایی با مَن هَمراهی کُنَند.</p>
 
 <div class="pagenum">14</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/16.jpg" /></p>
 
-<p dir="rtl">مرد دیگری ایستاد و گفت: مردها میتوانند چاه بکنند.</p>
+<p dir="rtl">مَردِ دیگر ایستاد و گفت: مَردها میتوانند چاه بکنند.</p>
 
 <div class="pagenum">15</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
 
-<p dir="rtl">همه ما یک صدا فریاد زدیم : ما باید زندگیمان را تغییر دهیم. از آن روز به بعد همگی با هم کار کردیم تا مشکلاتمان را حل کنیم.</p>
+<p dir="rtl">هَمه ما یِک صِدا فَریاد زَدیم: ما باید زِندگیمان را تَغییر دَهیم. اَز آن روز به بَعد هَمِگی با هَم کار کَردیم تا مُشکِلاتِمان را حَل کُنیم.</p>
 
 <div class="pagenum">16</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
