--- a/stories/fa/0030_احساسات.html
+++ b/stories/fa/0030_احساسات.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>احساسات</title>
+    <title>اِحساسات</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,41 +43,41 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/01.jpg" />
 
-<h1 dir="rtl" id="section">احساسات</h1>
+<h1 dir="rtl" id="section">اِحساسات</h1>
 
 Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
 
-<p dir="rtl">قلب من چیزهای زیادی را احساس میکند.</p>
+<p dir="rtl">قَلبِ مَن چیزهایِ زیادی را اِحساس میکُنَد.</p>
 
 <div class="pagenum">1</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/03.jpg" /></p>
 
-<p dir="rtl">من احساس خوشحالی می کنم وقتی که بعد ازظهرها مادربزرگم برایم داستان تعریف می کند.</p>
+<p dir="rtl">مَن اِحساسِ خوشحالی میکُنَم وَقتی که بَعد اَزظُهرها مادَربُزُرگَم بَرایَم داستان تَعریف میکُنَد.</p>
 
 <div class="pagenum">2</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/04.jpg" /></p>
 
-<p dir="rtl">من احساس نادانی می کنم وقتی با دوستانم بازی می کنم.</p>
+<p dir="rtl">مَن اِحساسِ نادانی میکُنَم وَقتی با دوستانَم بازی میکُنَم.</p>
 
 <div class="pagenum">3</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/05.jpg" /></p>
 
-<p dir="rtl">من احساس بدی دارم وقتی که پدرم می گوید پول ندارم.</p>
+<p dir="rtl">مَن اِحساسِ بَدی دارَم وَقتی که پِدَرَم میگوید پول نَدارَم.</p>
 
 <div class="pagenum">4</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
 
-<p dir="rtl">من عشق را احساس می کنم وقتی مادرم مرا در آغوش می گیرد.</p>
+<p dir="rtl">مَن عِشق را اِحساس میکُنَم وَقتی مادَرَم مَرا دَر آغوش میگیرد.</p>
 
 <div class="pagenum">5</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
