--- a/stories/fa/0030_احساسات_slides.html
+++ b/stories/fa/0030_احساسات_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>احساسات - Global African Storybook</title>
+  <title>اِحساسات - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="احساسات" class="slide level1">
-<h1 dir="rtl">احساسات</h1>
+<h1 dir="rtl">اِحساسات</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
-<p dir="rtl">قلب من چیزهای زیادی را احساس میکند.</p>
+<p dir="rtl">قَلبِ مَن چیزهایِ زیادی را اِحساس میکُنَد.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/03.jpg" /></p>
-<p dir="rtl">من احساس خوشحالی می کنم وقتی که بعد ازظهرها مادربزرگم برایم داستان تعریف می کند.</p>
+<p dir="rtl">مَن اِحساسِ خوشحالی میکُنَم وَقتی که بَعد اَزظُهرها مادَربُزُرگَم بَرایَم داستان تَعریف میکُنَد.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/04.jpg" /></p>
-<p dir="rtl">من احساس نادانی می کنم وقتی با دوستانم بازی می کنم.</p>
+<p dir="rtl">مَن اِحساسِ نادانی میکُنَم وَقتی با دوستانَم بازی میکُنَم.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/05.jpg" /></p>
-<p dir="rtl">من احساس بدی دارم وقتی که پدرم می گوید پول ندارم.</p>
+<p dir="rtl">مَن اِحساسِ بَدی دارَم وَقتی که پِدَرَم میگوید پول نَدارَم.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
-<p dir="rtl">من عشق را احساس می کنم وقتی مادرم مرا در آغوش می گیرد.</p>
+<p dir="rtl">مَن عِشق را اِحساس میکُنَم وَقتی مادَرَم مَرا دَر آغوش میگیرد.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,7 +141,7 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" id="احساسات-1">احساسات</h2>
+<h2 dir="rtl" id="احساسات-1">اِحساسات</h2>
 <strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Kathy Arbuckle<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
