--- a/stories/fa/0052_سیمبگوایر_slides.html
+++ b/stories/fa/0052_سیمبگوایر_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>سیمبگوایر - Global African Storybook</title>
+  <title>سیمبِگوایر  - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="سیمبگوایر" class="slide level1">
-<h1 dir="rtl">سیمبگوایر</h1>
+<h1 dir="rtl">سیمبِگوایر</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
-<p dir="rtl">وقتی که مادرسیمبگوایر مرد، او خیلی غمگین بود. پدر سیمبگوایر تمام تلاشش را کرد تا از دخترش مراقبت کند. کم کم آنها یاد گرفتند که بدون وجود مادرسیمبگوایر دوباره احساس شادی کنند. هر روز صبح آنها می نشستند و در مورد روزی که پیش رو داشتند با هم صحبت می کردند. هر بعد از ظهر با هم شام درست می کردند. بعد از شستن ظرف ها، پدرسیمبگوایر در انجام تکالیفش به او کمک می کرد.</p>
+<p dir="rtl">وَقتی کِه مادَرِسیمبِگوایر مُرد، او خِیلی غَمگین بود. پِدَرِ سیمبِگوایر تمام تلاشش را کرد تا اَز دُختَرَش مُراقِبَت کُنَد. کَم کَم آنها یاد گِرِفتَند کِه بِدونِ وُجودِ مادَرِسیمبِگوایر دوبارِه اِحساسِ شادی کُنَند. هَر روز صُبح آنها مینشَستَند وَ دَر مورِدِ روزی کِه پیشِ رو داشتَند با هَم صُحبَت میکَردَند. هَر بَعد اَز ظُهر با هَم شام دُرُست میکَردَند. بَعد اَز شُستَنِ ظَرفها، پِدَرِسیمبِگوایر دَر اَنجامِ تَکالیفَش بِه او کُمَک میکَرد.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
-<p dir="rtl">یک روز پدر سیمبگوایر دیرتر از همیشه به خانه آمد. او صدا زد، &quot;دخترم کجایی؟&quot; سیمبگوایر به سمت پدرش دوید. اوبی حرکت ایستاد وقتی که دید پدرش دست زنی را گرفته بود.&quot; دخترم، من می خواهم که تو شخص خاصی را ببینی. با لبخند گفت، &quot;این خانم آنیتا هست&quot;.</p>
+<p dir="rtl">یِک روز پِدَرِ سیمبِگوایر دیرتَر اَز هَمیشه بِه خانِه آمَد. او صِدا زَد، &quot;دُختَرَم کُجایی؟&quot; سیمبِگوایر بِه سَمتِ پِدَرَش دَوید. اوبیحَرِکَت ایستاد وَقتی کِه دید پَدَرَش دَستِ زَنی را گِرِفتِه بود.&quot; دُختَرَم، مَن میخواهَم کِه تو شَخصِ خاصی را ملاقات کُنی. با لَبخَند گُفت، &quot;این آنیتا هَست&quot;.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
-<p dir="rtl">آنیتا گفت، &quot;سلام سیمبگوایر، پدرت در مورد تو زیاد برایم گفته است. ولی او لبخند نزد یا دست سیمبگوایررا نگرفت. پدر سیمبگوایر خوشحال و هیجان زده بود. او در مورد اینکه اگرهر سه تای آنها با هم زندگی کنند،چقدر خوشبخت می شوند صحبت کرد. او گفت دخترم، من امیدوارم که تو آنیتا را به عنوان مادرت بپذیری.&quot;.&quot;</p>
+آنیتا گُفت، &quot;سَلام سیمبِگوایر ، پَدَرَت دَر مورِدِ تو زیاد بَرایَم گُفتِه اَست. &quot; وَلی او لَبخَند نَزَد یا دَستِ سیمبِگوایر را نَگِرِفت. پِدَرِ سیمبِگوایر خوشحال وَ هَیَجان زَدِه بود. او دَر مُورِد اینکه اَگَرهَر سِه تایِ آنها با هَم زِندگی کنُنَد، چِقَدر خُوشبَخت میشَوَند صُحبَت کَرد. او گُفت &quot;دُختَرَم، مَن اُمیدوارَم کِه تو آنیتا را بِه عُنوانِ مادَرَت بِپَذیری . &quot;
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
-<p dir="rtl">زندگی سیمبگوایر تغییر کرد. او دیگر وقت نداشت که صبح کنار پدرش بنشیند. آنیتا کارهای خانه ی خیلی زیادی به او می داد در حدی که بعد ازظهرها برای انجام تکالیفش خیلی خسته بود. بعد ازخوردن شام یک راست به رختخواب می رفت. تنها چیزی که به او آرامش می داد پتوی رنگارنگی بود که مادرش به او داده بود. پدرسیمبگوایرمتوجه نبود که دخترش شاد به نظر نمی رسید.</p>
+<p dir="rtl">زِندگی سیمبِگوایر تَغییر کَرد. او دیگر وَقت نَداشت کِه صُبح کِنارِ پِدَرَش بنشیند. آنیتا کارهایِ خانِه یِ خِیلی زیادی بِه او میداد دَر حَدی کِه بَعد اَزظُهرها بَرایِ اَنجامِ تَکالیفَش خِیلی خَستِه بود. او بَعد اَزخوردَنِ شام یِک راست بِه رَختِخواب میرفت. تَنها چیزی کِه بِه او آرامِش میداد پَتویِ رَنگارَنگی بود کِه مادَرَش بِه او دادِه بود. پِدَرِسیمبِگوایر مُتِوَجِه نَبود کِه دُختَرَش شاد بِه نَظَر نِمیرسد.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
-<p dir="rtl">بعد از چند ماه، پدرسیمبگوایربه آنها گفت که باید برای مدتی خانه را ترک کند. او گفت، &quot;باید به سفری کاری بروم.&quot; &quot;ولی می دانم که شما مراقب هم خواهید بود.&quot; صورت سیمبگوایر آویزان و غمگین شد، ولی پدرش متوجه نشد. آنیتا هیچ حرفی نزد. او هم خوشحال نبود.</p>
+<p dir="rtl">بَعد اَز چَند ماه، پِدَرِسیمبِگوایر بِه آنها گُفت کِه باید بَرایِ مُدتی خانِه را تَرک کُنَد. او گُفت، &quot;باید بِه سَفَری کاری بِرَوَم.&quot; &quot;وَلی میدانَم کِه شُما مُراقِبِ هَم خواهید بود.&quot; صورَتِ سیمبِگوایر آویزان وَ غَمگین شُد، وَلی پِدَرَش مُتِوَجِه نَشُد. آنیتا هیچ حَرفی نَزَد. او هَم خوشحال نَبود.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
-<p dir="rtl">کارها برای سیمبگوایر بدتر شد. اگر اوکارهای روزمره را تمام نمی کرد یا شکایت می کرد، آنیتا او را کتک می زد. و موقع شام، آنیتا بیشتر غذا ها را می خورد، و سیمبگوایر را با اندکی غذا رها می کرد. هر شب سیمبگوایر برای خودش گریه می کرد و پتوی مادرش را در آغوش می گرفت تا خوابش ببرد.</p>
+<p dir="rtl">اوضاع بَرایِ سیمبِگوایر بَدتَر شُد. اَگَر اوکارهایِ روزمَرِه را تَمام نِمی کَرد یا شِکایَت میکَرد، آنیتا او را کُتَک میزَد. وَ موقِع شام، آنیتا بیشتَرغَذا ها را میخورد، وَ سیمبِگوایر را با اَندَکی غَذا رَها میکَرد. هَر شَب سیمبِگوایر برایِ خودَش گِریه میکَرد وَ پَتویِ مادَرَش را دَر آغوش میگِرِفت تا خوابَش بِبَرَد.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
-<p dir="rtl">یک روز صبح، سیمبگوایر دیر از رختخواب بلند شد. آنیتا سرش داد زد و گفت، &quot;تو دختر تنبلی هستی!&quot;او سیمبگوایر را از تخت هل داد. آن پتوی با ارزش به ناخنی گیر کرد و به دو قسمت پاره شد.</p>
+<p dir="rtl">یِک روز صُبح، سیمبِگوایر دیر اَز رَختِخواب بُلَند شُد. آنیتا سَرَش داد زِد وَ گُفت، &quot;تو دُختَرِ تَنبَلی هَستی!&quot; او سیمبِگوایر را اَز تَخت هُل داد. آن پَتویِ با اَرزِش بِه ناخُنش گیر کَرد وَ به دو قِسمَت پارِه شُد.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
-<p dir="rtl">سیمبگوایر خیلی آشفته بود. او تصمیم گرفت که از خانه فرار کند. او قسمتی از پتوی مادرش را برداشت، مقداری غذا برداشت و خانه را ترک کرد. او راهی که پدرش رفته بود را دنبال کرد.</p>
+<p dir="rtl">سیمبِگوایر خِیلی آشُفتِه بود. او تَصمیم گِرِفت کِه اَز خانِه فَرار کُنَد. او قِسمَتی اَز پَتویِ مادَرَش را بَرداشت، مِقداری غَذا بَرداشت وَ خانه را تَرک کَرد. او راهی کِه پِدَرَش رَفته بود را دُنبال کَرد.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
-<p dir="rtl">وقتی که غروب شد، از یک درخت بلند نزدیک رود بالا رفت و درشاخه ها برای خودش تختی درست کرد. تا زمانی که به خواب رفت آواز می خواند :&quot; مامان، مامان، مامان تو من را رها کردی. تو مرا رها کردی و دیگر هیچوقت برنگشتی. پدردیگر من را دوست ندارد. مامان، تو کی برمی گردی ؟ تو منو رها کردی.&quot;</p>
+<p dir="rtl">وَقتی که غُروب شُد، اَز یِک دِرَختِ بُلَند نَزدیکِ رود بالا رَفت وَ دَرشاخِه ها بَرایِ خودَش تَختی دُرُست کَرد. تا زَمانی که به خواب رَفت آواز میخوانَد: &quot;مامان، مامان، مامان تو مَن را رَها کَردی. تو مَرا رَها کَردی وَ دیگر هیچوَقت بَرنَگَشتی. پِدَردیگر مَن را دوست نَدارَد. مامان، تو کِی بَرمیگَردی؟ تو مَنو رَها کَردی.&quot;</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
-<p dir="rtl">صبح روز بعد، سیمبگوایر دوباره آواز خواند. وقتی که زنان برای شستن لباس هایشان به کنار رود آمدند، صدای آواز غمگینی را که از بالای یک درخت بلند می آمد، شنیدند. آنها فکر کردند که آن فقط باد است که برگ ها را به صدا در می آورد، وبه کار خود ادامه دادند. ولی یکی از خانم ها خیلی با دقت به آواز گوش داد.</p>
+<p dir="rtl">صُبحِ روزِ بَعد، سیمبِگوایر دوباره آواز خواند. وَقتی که زَنان بَرایِ شُستَنِ لِباس هایِشان به کِنارِ رود آمَدَند، صِدایِ آوازِ غَمگینی را کِه اَز بالایِ یِک دِرَختِ بُلَند میامَد، شنیدند. آنها فِکر کَردَند کِه آن فَقَط باد اَست کِه بَرگ ها را بِه صِدا دَر میاوَرَد، وَبه کارِ خود اِدامِه دادَند. وَلی یِکی اَز خانُم ها خِیلی با دِقَت بِه آواز گوش داد.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
-<p dir="rtl">آن زن به بالای درخت نگاه کرد. وقتی که او آن دختر و قسمتی از پتوی رنگارنگش را دید، گریه کرد، &quot;سیمبگوایر، دختر برادرم.&quot; آن زن دیگر شستنش را متوقف کرد و به سیمبگوایر در پایین آمدن از درخت کمک کرد. عمه اش آن دخترک را در آغوش گرفت وسعی کرد اورا دلداری دهد.</p>
+<p dir="rtl">آن زَن بِه بالایِ دِرَخت نِگاه کَرد. وَقتی کِه او آن دِختَر وَ قِسمَتی اَز پَتویِ رَنگارَنگَش را دید، گِریه کَرد، &quot;سیمبِگوایر ، دُختَرِ بَرادَرَم.&quot; زَنانِ دیگَر شُستشو را مُتِوَقِف کَرد وَ بِه سیمبِگوایر دَر پایین آمَدَن اَز دِرَخت کُمَک کَرد. عَمِه اَش آن دُختَرَک را دَر آغوش گِرِفت وَسَعی کَرد اورا دِلداری دَهَد.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
-<p dir="rtl">عمه ی سیمبگوایراو را به خانه ی خودش برد. او به سیمبگوایر غذای گرم داد، و او را با پتوی مادرش در رختخواب گذاشت. آن شب سیمبگوایرگریه کرد تا زمانی که خوابش برد. ولی آنها اشک آسودگی بود. او میدانست که عمه اش مراقبش خواهد بود.</p>
+<p dir="rtl">عَمِه یِ سیمبِگوایر او را بِه خانِه یِ خودَش بُرد. او بِه سیمبِگوایر غَذایِ گَرم داد، وَ او را با پَتویِ مادَرَش دَر رَختِخواب گُذاشت. آن شَب سیمبِگوایر گِریه کَرد تا زَمانی کِه خوابَش بُرد. وَلی آنها اَشکِ آسودِگی بود. او میدانِست کِه عَمِه اَش مُراقِبَش خواهَد بود.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
-<p dir="rtl">وقتی که پدرسیمبگوایر به خانه برگشت، اتاقش را خالی دید. با قلبی اندوهگین پرسید، &quot;چه اتفاقی افتاده آنیتا؟&quot; آنیتا توضیح داد که سیمبگوایر فرار کرده است. ااو گفت، &quot;من از او خواستم که به من احترام بگذارد،&quot;ولی شاید من خیلی سخت گیر بودم.&quot; پدر سیمبگوایر خانه را ترک کرد و به سمت مسیر رود رفت. او مسیرش را به سمت روستای خواهرش ادامه داد تا ببیند که آیا سیمبگوایر را آنجا میبیند.</p>
+<p dir="rtl">وَقتی کِه پِدَرِسیمبِگوایر بِه خانِه بَرگَشت، اُتاقَش را خالی دید. با قلبی اندوهگین پُرسید، &quot;چِه اِتِفاقی اُفتادِه آنیتا؟&quot; زن توضیح داد کِه سیمبِگوایر فَرار کَردِه اَست. او گُفت، &quot;مَن اَز او خواستَم کِه بِه مَن اِحتِرام بِگُذارَد،&quot;وَلی شاید مَن خِیلی سَخت گیر بودَم.&quot; پِدَرِ سیمبِگوایر خانِه را تَرک کَرد وَ بِه سَمتِ مَسیر رود رَفت. او مَسیرش را بِه سَمتَ روستایِ خواهَرَش اِدامِه داد تا بِبیند کِه آیا او سیمبِگوایر را دیده است.</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
-<p dir="rtl">وقتی که سیمبگوایر پدرش را از دور دید، داشت با بچه های عمه اش بازی میکرد. او ترسیده بود ممکن بود پدرش عصبانی باشد، پس او به داخل خانه دوید تا قایم شود. ولی پدرش به سمت او رفت و گفت، &quot;سیمبگوایر، تو باید یک مادر عالی برای خودت پیدا کنی. کسی که تو را دوست بدارد وتو را بفهمد. من به تو افتخار می کنم و تو را دوست دارم.&quot; آنها موافقت کردند که سیمبگوایر تا زمانی که بخواهد پیش عمه اش بماند.</p>
+<p dir="rtl">سیمبِگوایر داشت با بَچِه هایِ عَمِه اَش بازی میکَرد کِه پِدَرَش را اَز دور دید. او تَرسیده بود مُمکِن بود پِدَرَش عَصَبانی باشَد، پَس او بِه داخِلِ خانِه دَوید تا قایِم شَوَد. وَلی پِدَرَش بِه سَمتِ او رَفت وَ گُفت، &quot;سیمبِگوایر ، تو یِک مادَرِ عالی بَرایِ خودَت پِیدا کَردی. کَسی کِه تو را دوست دارَد وَتو را میفَهمَد. مَن بِه تو اِفتِخار میکُنَم وَ تو را دوست دارَم.&quot; آنها مُوافِقَت کَردَند کِه سیمبِگوایر تا زَمانی کِه بِخواهَد پیشِ عَمِه اَش بِمانَد.</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
-<p dir="rtl">پدرش هر روز به دیدن او می رفت. سرانجام او با آنیتا رفت. او دستش را دراز کرد که دستان سیمبگوایر را بگیرد. او گریه کرد وگفت، &quot;من خیلی متاسفم کوچولو، من اشتباه کردم.&quot; &quot;به من اجازه می دهی که دوباره امتحان کنم؟&quot; سیمبگوایربه پدرش وصورت نگرانش نگاه کرد. سپس به آرامی به سمت آنیتا قدم برداشت و دستانش را دور او حلقه کرد.</p>
+<p dir="rtl">پِدَرَش هَر روز بِه دیدنِ او می رَفت. سَراَنجام او با آنیتا رَفت. او دَستَش را دِراز کَرد کَه دَستانِ سیمبِگوایر را بِگیرد. او گِریه کَرد وَگُفت، &quot;مَن خِیلی مُتِاَسِفَم کوچولو، مَن اِشتِباه کَردَم.&quot; &quot;بِه مَن اِجازِه می دَهی کِه دُوبارِه اِمتِحان کُنَم؟&quot; سیمبِگوایر بِه پِدَرَش وَصورَتِ نِگَرانَش نِگاه کَرد. سِپَس بِه آرامی بِه سَمتِ آنیتا قَدَم بَرداشت وَ دَستانَش را دورِ او حَلقِه کَرد.</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
-<p dir="rtl">هفته ی بعد، آنیتا، سیمبگوایر،عمه و پسر عمه اش را به صرف عصرانه به خانه دعوت کرد. عجب ضیافتی ! آنیتا تمام غذاهای مورد علاقه ی سیمبگوایر را آماده کرده بود، وهمگی تا جایی که جا داشتند از آنها خوردند. سپس بچه ها در حالیکه بزرگترها مشغول صحبت بودند سرگرم بازی شدند. سیمبگوایر احساس شادی و شجاعت کرد. او زود تصمیم گرفت، خیلی زود، که به خانه برگردد وبا پدر و نامادریش زندگی کند.</p>
+<p dir="rtl">هَفتِه یِ بَعد، آنیتا، سیمبِگوایر ،عَمِه وَ پِسَر عَمِه هایَش را بِه صَرفِ عَصرانِه بِه خانِه دَعوَت کَرد. عَجَب ضیافَتی! آنیتا تَمامِ غَذاهایِ مورِدِ عَلاقِه یِ سیمبِگوایر را آمادِه کَردِه بود، وَهَمِگی تا جایی کِه جا داشتَند اَز آنها خوردَند. سِپَس بَچِه ها دَر حالیکِه بُزُرگتَرها مَشغولِ صُحبَت بودَند سَرگَرمِ بازی شُدَند. سیمبِگوایر اِحساسِ شادی وَ شُجاعَت کَرد. او زود تَصمیم گِرِفت، خِیلی زود، کِه بِه خانِه بَرگَردَد وَبا پِدَر وَ نامادَریَش زِندگی کُنَد.</p>
 <center>
 <strong>16</strong>
 </center>
@@ -240,7 +240,7 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" id="سیمبگوایر-1">سیمبگوایر</h2>
+<h2 dir="rtl" id="سیمبگوایر-1">سیمبِگوایر</h2>
 <strong>Text:</strong> Rukia Nantale<br> <strong>Illustrations:</strong> Benjamin Mitchley<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
