--- a/stories/fa/0066_نوزیبل-و-سه-تار-مو_slides.html
+++ b/stories/fa/0066_نوزیبل-و-سه-تار-مو_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>نوزیبل و سه تار مو - Global African Storybook</title>
+  <title>نوزیبِل وَ سِه تارِ مو - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="نوزیبل-و-سه-تار-مو" class="slide level1">
-<h1 dir="rtl">نوزیبل و سه تار مو</h1>
+<h1 dir="rtl">نوزیبِل وَ سِه تارِ مو</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
-<p dir="rtl">در زمان های خیلی دور، سه دختر برای جمع آوری چوب به بیرون از خانه رفتند.</p>
+<p dir="rtl">دَر زَمان هایِ خِیلی دور، سِه دُختَر بَرایِ جَمع آوَریِ چوب بِه بیرون اَز خانِه رَفتَند.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
-<p dir="rtl">روز گرمی بود بنابراین به سمت رودخانه به پایین رفتند تا شنا کنند. آنها بازی کردند وآب بازی کردند و در آب شنا کردند.</p>
+<p dir="rtl">روزِ گَرمی بود بَنابَراین آنها بِه سَمتِ رودخانِه رَفتَند تا شِنا کُنَند. آنها بازی کَردَند وَآب بازی کَردَند وَ دَر آب شِنا کَردَند.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
-<p dir="rtl">ناگهان، آنها فهمیدند که دیر شده است. آنها با عجله به روستا برگشتند.</p>
+<p dir="rtl">ناگَهان، آنها فَهمیدند کِه دیر شُدِه اَست. آنها با عَجَلِه بِه روستا بَرگَشتَند.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
-<p dir="rtl">وقتی که نزدیک خانه بودند، نوزیبل دستش را روی کمرش گذاشت. او گردنبندش را فراموش کرده بود!او از دوستانش خواهش کرد، &quot;خواهش می کنم با من بیایید!&quot; ولی دوستانش گفتند الان خیلی دیر وقت است.</p>
+<p dir="rtl">وَقتی کِه نَزدیکِ خانِه بودَند، نوزیبِل دَستَش را رویِ گَردَنَش گُذاشت. او گَردَنبَندَش را فَراموش کَردِه بود! او اَز دوستانَش خواهِش کَرد، &quot;خواهَش می کُنَم با مَن بیایید!&quot; وَلی دوستانَش گُفتَند اَلان خِیلی دیر وَقت اَست.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
-<p dir="rtl">بنابراین نوزیبل تنهایی به رودخانه برگشت. گردنبندش را پیدا کرد و با عجله به خانه برگشت. ولی او در تاریکی گم شد.</p>
+<p dir="rtl">بَنابَراین نوزیبِل تَنهایی بِه رودخانِه بَرگَشت. گَردَنبَندَش را پِیدا کَرد وَ با عَجَلِه بِه خانِه بَرگَشت. وَلی او دَر تاریکی گُم شُد.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
-<p dir="rtl">در طول مسیرش او نوری را دید که ازیک کلبه ای می آمد. او با عجله به سمت آن را رفت ودر زد.</p>
+<p dir="rtl">دَر طولِ مَسیرش او نوری را دید کِه اَزیِک کُلبِه ای می آمَد. او با عَجَلِه بِه سَمتِ آن را رَفت وَدَر زَد.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
-<p dir="rtl">درکمال تعجب، یک سگ در را باز کرد وگفت، &quot;چه می خواهی؟&quot; نوزیبل گفت، &quot;من گم شده ام وبرای خوابیدن دنبال جایی می گردم.&quot;سگ گفت، &quot;بیا داخل، یا من گازت می گیرم!&quot; پس نوزیبل به داخل کلبه رفت.</p>
+<p dir="rtl">دَرکَمالِ تَعَجُب، یِک سَگ دَر را باز کَرد وَگُفت، &quot;چِه می خواهی؟&quot; نوزیبِل گُفت، &quot;مَن گُم شُدِه اَم وَبَرایِ خوابیدن دُنبالِ جایی می گَردَم.&quot;سَگ گُفت، &quot;بیا داخِل، وگَرنه گازِت می گیرم!&quot; پَس نوزیبِل بِه داخِلِ کُلبِه رَفت.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
-<p dir="rtl">بعد سگ گفت، &quot;برایم غذا بپز!&quot; نوزیبل جواب داد، ولی من تا حالا برای سگ آشپزی نکرده ام.&quot;سگ گفت، &quot;آشپزی کن وگرنه من تو را گاز می گیرم.&quot;بنابراین نوزیبل مقداری غذا برای سگ درست کرد.</p>
+<p dir="rtl">بَعد سَگ گُفت، &quot;بَرایَم غَذا بِپَز!&quot; نوزیبِل جَواب داد، &quot;وَلی مَن تا حالا بَرایِ سَگ آشپَزی نَکَردِه اَم.&quot; سَگ گُفت، &quot;آشپَزی کُن وَگَرنَه مَن تو را گاز می گیرم.&quot; بَنابَراین نوزیبِل مِقداری غَذا بَرایِ سَگ دُرُست کَرد.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
-<p dir="rtl">سپس سگ گفت، &quot;تختم را برایم مرتب کن!&quot; نوزیبل در جواب گفت، &quot;من تا به حال تخت سگ را مرتب نکرده ام. سگ گفت، &quot;تخت را مرتب کن وگرنه گازت می گیرم!&quot;پس نوزیبل تخت را مرتب کرد.</p>
+<p dir="rtl">سِپَس سَگ گُفت، &quot;تَختَم را بَرایَم مُرَتَب کُن!&quot; نوزیبِل دَر جَواب گُفت، &quot;مَن تا بِه حال تَختِ سَگ را مُرَتَب نَکَردِه اَم. &quot; سَگ گُفت، &quot;تَخت را مُرَتَب کُن وَگَرنَه گازَت می گیرم!&quot; پَس نوزیبِل تَخت را مُرَتَب کَرد.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
-<p dir="rtl">هر روز او مجبور بود که برای سگ آشپزی، جارو و شست و شو کند. سپس یک روز سگ گفت، &quot;نوزیبل، امروز من باید به دیدن چند تا ازدوستانم بروم. خانه را جارو کن، غذا را درست کن و چیزهایم را بشورتا قبل از اینکه به خانه برگردم.</p>
+<p dir="rtl">هَر روز او مَجبور بود کِه بَرایِ سَگ آشپَزی، جارو وَ شُست و شو کُنَد. سِپَس یِک روز سَگ گُفت، &quot;نوزیبِل، اِمروز مَن باید بِه دیدنِ چَند تا اَزدوستانَم بِرَوَم. خانِه را جارو کُن، غَذا را دُرُست کُن وَ چیزهایَم را بِشورتا قَبل اَز اینکه بِه خانِه بَرگَردَم.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
-<p dir="rtl">به محض اینکه سگ رفت، نوزیبل سه نخ از موهای سرش را کند. او یک نخش را زیر تخت، یکی را پشت در، و یکی را روی حصار گذاشت. سپس با سرعت هرچه تمام تر به سمت خانه دوید.</p>
+<p dir="rtl">بِه مَحضِ اینکه سَگ رَفت، نوزیبِل سِه نَخ اَز موهایِ سَرَش را کَند. او یِک نَخَ را زیر تَخت، یِکی را پَشتِ دَر، وَ یِکی را رویِ حِصار گَذاشت. سِپَس با سُرعَتِ هَرچِه تَمام تَر بِه سَمتِ خانِه دَوید.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
-<p dir="rtl">وقتی که سگ برگشت، دنبال نوزیبل گشت. داد زد، &quot;نوزیبل تو کجایی؟&quot; اولین تار مو گفت، &quot;من اینجا هستم، زیر تخت.&quot; تار موی دوم گفت، &quot;من اینجا هستم، پشت در&quot; تار موی سوم گفت، &quot;من اینجا هستم، روی حصار.&quot;</p>
+<p dir="rtl">وَقتی کِه سَگ بَرگَشت، دُنبالِ نوزیبِل گَشت. داد زَد، &quot;نوزیبِل تو کُجایی؟&quot; اَوَلین تارَ مو گُفت، &quot;مَن اینجا هَستَم، زیر تَخت.&quot; تارِ مویِ دُوُم گُفت، &quot;مَن اینجا هَستَم، پَشتِ دَر&quot; تارِ مویِ سِوُم گُفت، &quot;مَن اینجا هَستَم، رویِ حِصار.&quot;</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
-<p dir="rtl">آنگاه سگ فهمید که نوزیبل به او حقه زده. پس او همه ی راه های روستا را دوید و دوید. ولی برادران نوزیبل با چوب های بزرگ آنجا ایستاده بودند. سگ برگشت وفرار کرد واز آن موقع به بعد ناپدید شد.</p>
+<p dir="rtl">آنگاه سَگ فَهمید کِه نوزیبِل بِه او حُقِّه زِدِه. پَس او هَمِه یِ راه هایِ روستا را دَوید وَ دَوید. وَلی بَرادَرانِ نوزیبِل با چوب هایِ بُزُرگ آنجا ایستاده بودند. سَگ بَرگَشت وَفَرار کَرد وَاَز آن موقِع بِه بَعد ناپَدید شُد.</p>
 <center>
 <strong>13</strong>
 </center>
@@ -213,7 +213,7 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" id="نوزیبل-و-سه-تار-مو-1">نوزیبل و سه تار مو</h2>
+<h2 dir="rtl" id="نوزیبل-و-سه-تار-مو-1">نوزیبِل وَ سِه تارِ مو</h2>
 <strong>Text:</strong> Tessa Welch<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
