--- a/stories/fa/0067_آشپزی_slides.html
+++ b/stories/fa/0067_آشپزی_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>آشپزی - Global African Storybook</title>
+  <title>آشپَزی - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -88,7 +88,7 @@
 <body>
 
 <section id="آشپزی" class="slide level1">
-<h1 dir="rtl">آشپزی</h1>
+<h1 dir="rtl">آشپَزی</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/02.jpg" /></p>
-<p dir="rtl">من سیب زمینی ها را پوست کندم.</p>
+<p dir="rtl">مَن سیب زمینی ها را پوست کَندَم.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/03.jpg" /></p>
-<p dir="rtl">کلم را ریز ریز خرد کردم.</p>
+<p dir="rtl">کَلَم را ریز ریز خُرد کَردم.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/04.jpg" /></p>
-<p dir="rtl">هویج ها را رنده کردم.</p>
+<p dir="rtl">هَویج ها را رَنده کَردَم.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/05.jpg" /></p>
-<p dir="rtl">لوبیا ها را شستم.</p>
+<p dir="rtl">لوبیا ها را شُستَم.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
-<p dir="rtl">کدو حلوایی ها را برش زدم.</p>
+<p dir="rtl">کَدو حَلوایی ها را بُرِش زَدَم.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/07.jpg" /></p>
-<p dir="rtl">اسفناج ها را ریز ریز کردم.</p>
+<p dir="rtl">اِسفِناج ها را ریز ریز کَردَم.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/08.jpg" /></p>
-<p dir="rtl">مادرم پیاز ها را ریز ریز خرد کرد.</p>
+<p dir="rtl">مادَرَم پیازها را ریز ریز خُرد کَرد.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/09.jpg" /></p>
-<p dir="rtl">پیازها اشک من را در می آورند وقتی که خرد می شوند.</p>
+<p dir="rtl">پیازها اَشکِ مَن را دَر می آوَرَند وَقتی کِه خُرد می شَوَند.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" id="آشپزی-1">آشپزی</h2>
+<h2 dir="rtl" id="آشپزی-1">آشپَزی</h2>
 <strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Kathy Arbuckle<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
