--- a/stories/tr/0243_büyükanne-ile-tatil_slides.html
+++ b/stories/tr/0243_büyükanne-ile-tatil_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>چه کار داری میکنی‌؟ - Global African Storybook</title>
+  <title>Büyükanne ile Tatil - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="چه-کار-داری-میکنی" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">چه کار داری میکنی‌؟</h1>
+<section id="büyükanne-ile-tatil" class="slide level1">
+<h1>Büyükanne ile Tatil</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p dir="rtl">من دارم آواز می‌خوانم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
+<p>Odongo ve Apiyo babalarıyla birlikte şehirde yaşıyorlardı. Onlar,tatili dört gözle bekliyorlardı. Sadece okul kapalı olacağı için değil, büyükannelerini ziyarete gidecekleri için de heyecanlılardı. Büyükanneleri, büyük bir gölün yanındaki bir balıkçı köyünde yaşıyordu.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p dir="rtl">او دارد دست تکان میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
+<p>Odongo ve Apiyo heyecanlılardı, çünkü yine büyükannelerini ziyaret etme zamanı gelmişti. Bir gece öncesinden tüm eşyalarını paketlediler ve büyükannelerinin köyüne doğru uzun bir yolculuk için hazırlandılar. Tüm gece boyunca da uyuyamayıp, tatil hakkında konuştular.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p dir="rtl">من دارم دست میزنم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
+<p>Ertesi sabah erkenden, köye gitmek için babalarının arabasıyla ayrıldılar. Dağlardan, vahşi hayvanların ve çay ekim alanlarının yanından geçtiler. Geçen arabaları saydılar ve şarkı söylediler.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p dir="rtl">او خودش را کش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/05.jpg" /></p>
+<p>Bir süre sonra çocuklar yoruldular, ve uyuyakaldılar.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p dir="rtl">او صدا میزند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
+<p>Babaları, Odongo ve Apiyo'yu köye vardıklarında uyandırdı. Büyükanneleri Nyar- Kanyada'yı, ağacın altında bir kilimin üzerinde dinlenirken buldular. Luo'da, Nyar-Kanyada, 'Kanyada insanlarının kızı' anlamına gelmektedir. Büyükanneleri güzel ve güçlü bir kadındı.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p dir="rtl">من پاسخ می‌دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
+<p>Nyar-Kanyada, onları evin içine davet etti, ve neşeyle odanın içinde dönerek dans etti. Torunları, ona şehirden getirdikleri hediyeleri vermek için sabırsızlanıyorlardı. &quot;İlk önce benim hediyemi aç,&quot; dedi Odongo. &quot;Hayır, ilk önce benim hediyem!&quot; dedi Apiyo.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p dir="rtl">او گوش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
+<p>Hediyelerini açtıktan sonra, Nyar-Kanyada, torunlarına geleneksel bir şekilde teşekkür etti.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p dir="rtl">تو داری چکار میکنی‌؟</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/09.jpg" /></p>
+<p>Ardından, Odongo ve Apiyo dışarı çıktılar. Kelebekleri ve kuşları kovaladılar.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,125 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="چه-کار-داری-میکنی-1">چه کار داری میکنی‌؟</h2>
-<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/10.jpg" /></p>
+<p>Ağaçlara tırmandılar, ve gölde suyla oynadılar.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/11.jpg" /></p>
+<p>Karanlık olduğunda, akşam yemeği yemek için eve döndüler. Yemeklerini bitiremeden uyuyakaldılar!</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/12.jpg" /></p>
+<p>Ertesi gün, babaları, çocukları Nyar-Kanyada ile bırakarak şehre geri döndü.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
+<p>Odongo ve Apiyo ev işlerinde büyükannelerine yardım ettiler. Su ve odun taşıdılar. Tavuklardan yumurta, bahçeden yeşillik topladılar.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
+<p>Nyar-Kanyada, torunlarına yumuşak Ugali yapmasını ve yahni ile yenmesini öğretti. Onlara, kızarmış balıkla yemek için nasıl hindistan cevizli pilav yapacaklarını gösterdi.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
+<p>Bir gün, Odongo, büyükannesinin ineklerini otlatmaya götürdü. İnekler komşu tarlaya girdiler. Çiftçi Odongoya kızmıştı. Onu, inekler ekinlerini yediği için onlara el koyacağını söyleyerek tehdit etti. O günden sonra, Odongo ineklerin tekrardan bir belaya bulaşmayacağına söz verdi.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
+<p>Başka bir gün, çocuklar Nyar-Kenyada ile birlikte pazara gittiler. Onun, sebze, şeker ve sabun satmak için bir tezgahı vardı. Apiyo, müşterilere eşyaların fiyatlarını söylemekten hoşlanmıştı. Odongo da müşterilerin aldıklarını paketledi.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
+<p>Günün sonunda, hep birlikte chai çayı içtiler. Büyükannelerine kazandığı parayı saymasında yardım ettiler.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
+<p>Ama çok kısa bir sürede tatil bitti ve çocuklar şehre geri dönmek zorundaydılar. Nyar Kanyada Odongo'ya bir şapka, Apiyo'ya da bir kazak verdi. Yolculuk için onlara yiyecek paketledi.</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
+<p>Onları almak için babaları geldiğinde, onlar gitmek istemiyorlardı. Çocuklar Nyar-Kanyada'ya onlarla şehre gelmesi için yalvardılar. O gülümsedi ve dedi ki &quot;Ben şehir hayatı için çok yaşlıyım. Sizin köyüme tekrar gelmenizi bekleyeceğim.&quot;</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
+<p>Odongo ve Apiyo büyükannelerine sıkıca sarıldılar ve veda ettiler.</p>
+<center>
+<strong>19</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
+<p>Odongo ve Apiyo okula geri döndüklerinde, arkadaşlarına köy hayatını anlattılar. Bazı çocuklar şehir hayatının iyi olduğunu düşünürlerken, diğerleri de köy hayatının daha iyi olduğunu düşündü. Ama en önemlisi, herkes Odongo ve Apiyo'nun mükemmel bir büyükannesi olduğu konusunda hemfikirdi.</p>
+<center>
+<strong>20</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="büyükanne-ile-tatil-1">Büyükanne ile Tatil</h2>
+<strong>Text:</strong> Violet Otieno<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> English<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/holidays-grandmother'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
