--- a/imagebank/index.html
+++ b/imagebank/index.html
@@ -105,6 +105,7 @@
         <option value="tl">Tagalog</option>
         <option value="ve">Tshivenda</option>
         <option value="aeb">Tunisian Arabic</option>
+        <option value="tr">Turkish</option>
         <option value="vi">Vietnamese</option>
         <option value="ts">Xitsonga</option>
         <option value="tsc">Xitswa</option>
