--- a/stories/fa/0001_مرد-خیلی-قد-بلند.html
+++ b/stories/fa/0001_مرد-خیلی-قد-بلند.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>مرد خیلی قد بلند</title>
+    <title>مَردِ خِیلی قَد بُلَند</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,83 +43,83 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
 
-<h1 dir="rtl" id="section">مرد خیلی قد بلند</h1>
+<h1 dir="rtl" id="section">مَردِ خِیلی قَد بُلَند</h1>
 
 Cornelius Gulere<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
 
-<p dir="rtl">دسته ی بیل او بسیار کوتاه بود.</p>
+<p dir="rtl">دَستِه یِ بیلِ او بِسیار کوتاه بود.</p>
 
 <div class="pagenum">1</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
 
-<p dir="rtl">در خانه اش خیلی پایین بود.</p>
+<p dir="rtl">دَرِ خانه اَش خِیلی پایین بود.</p>
 
 <div class="pagenum">2</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
 
-<p dir="rtl">تختش خیلی کوتاه بود.</p>
+<p dir="rtl">تَختَش خِیلی کوتاه بود.</p>
 
 <div class="pagenum">3</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
 
-<p dir="rtl">دوچرخه اش خیلی کوتاه بود.</p>
+<p dir="rtl">دوچَرخه اَش خِیلی کوتاه بود.</p>
 
 <div class="pagenum">4</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
 
-<p dir="rtl">این مرد خیلی بلند قد بود!</p>
+<p dir="rtl">این مَرد خِیلی بُلَند قَد بود!</p>
 
 <div class="pagenum">5</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
 
-<p dir="rtl">اون یک دسته ی بیل خیلی بلند برای خودش درست کرد.</p>
+<p dir="rtl">او یِک دَستِه یِ بیلِ خِیلی بُلَند بَرایِ خودَش دُرُست کَرد.</p>
 
 <div class="pagenum">6</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
 
-<p dir="rtl">اون یک چهارچوب در خیلی بلند ساخت.</p>
+<p dir="rtl">او یِک چَهارچوبِ خِیلی بُلَندِ دَرِساخت.</p>
 
 <div class="pagenum">7</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
 
-<p dir="rtl">اون یک تخت خیلی بلند ساخت.</p>
+<p dir="rtl">او یِک تَختِ خِیلی بُلَند ساخت.</p>
 
 <div class="pagenum">8</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
 
-<p dir="rtl">یک دوچرخه خیلی بلند خرید.</p>
+<p dir="rtl">یِک دوچَرخِهی خِیلی بُلَند خَرید.</p>
 
 <div class="pagenum">9</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
 
-<p dir="rtl">روی یک صندلی خیلی بلند نشست. با چنگال خیلی بلند غذا خورد.</p>
+<p dir="rtl">او روی یِک صَندَلی خِیلی بُلَند نِشَست. با چَنگال خِیلی بُلَند غَذا خورد.</p>
 
 <div class="pagenum">10</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
 
-<p dir="rtl">اوخانه اش را ترک کرد و در یک جنگل بزرگ زندگی کرد. اون سالهای زیادی زندگی کرد.</p>
+<p dir="rtl">او خانهاَش را تَرک کَرد وَ در یِک جَنگَلِ بُزرگ زِندگی کَرد. او سالهایِ زیادی زِندگی کرد.</p>
 
 <div class="pagenum">11</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
