--- a/stories/fa/0002_به-حیوانات-نگاه-کنید.html
+++ b/stories/fa/0002_به-حیوانات-نگاه-کنید.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>به حیوانات نگاه کنید</title>
+    <title>بِه حِیوانات نِگاه کُنید</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,62 +43,62 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/01.jpg" />
 
-<h1 dir="rtl" id="section">به حیوانات نگاه کنید</h1>
+<h1 dir="rtl" id="section">بِه حِیوانات نِگاه کُنید</h1>
 
 Jenny Katz<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/02.jpg" /></p>
 
-<p dir="rtl">به حیوانات نگاه کنید.</p>
+<p dir="rtl">به حِیوانات نِگاه کُنید.</p>
 
 <div class="pagenum">1</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
 
-<p dir="rtl">گاو میگوید : موووووو</p>
+<p dir="rtl">گاو میگوید: موووووو</p>
 
 <div class="pagenum">2</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
 
-<p dir="rtl">بزغاله میگوید : مع مع</p>
+<p dir="rtl">بُزغالِه میگوید: مِع مِع</p>
 
 <div class="pagenum">3</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/05.jpg" /></p>
 
-<p dir="rtl">اسب میگوید : یوهوهوووو</p>
+<p dir="rtl">اَسب میگوید: یوهوهوووو</p>
 
 <div class="pagenum">4</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
 
-<p dir="rtl">خوک میگوید : خرخر</p>
+<p dir="rtl">خوک میگوید: خِرخِر</p>
 
 <div class="pagenum">5</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/07.jpg" /></p>
 
-<p dir="rtl">مرغ میگوید: قدقد</p>
+<p dir="rtl">مُرغ میگوید: قُدقُد</p>
 
 <div class="pagenum">6</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
 
-<p dir="rtl">سگ میگوید: واق واق</p>
+<p dir="rtl">سَگ میگوید: واق واق</p>
 
 <div class="pagenum">7</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/09.jpg" /></p>
 
-<p dir="rtl">کشاورز میگوید : ششش</p>
+<p dir="rtl">کِشاوَرز میگوید: ششش</p>
 
 <div class="pagenum">8</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
