--- a/stories/fa/0004_بزغاله،-سگ-و-گاو.html
+++ b/stories/fa/0004_بزغاله،-سگ-و-گاو.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>بزغاله، سگ و گاو</title>
+    <title>بُزغاله، سَگ وَ گاو</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,62 +43,62 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/01.jpg" />
 
-<h1 dir="rtl" id="section">بزغاله، سگ و گاو</h1>
+<h1 dir="rtl" id="section">بُزغاله، سَگ وَ گاو</h1>
 
 Fabian Wakholi<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
 
-<p dir="rtl">بزغاله، سگ وگاو دوستان خوبی بودند. روزی آنها با تاکسی به مسافرت رفتند.</p>
+<p dir="rtl">بُزغاله، سَگ وَگاو دوستانِ خوبی بودَند. روزی آنها با تاکسی به مُسافِرَت رَفتَند.</p>
 
 <div class="pagenum">1</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
 
-<p dir="rtl">وقتی آنها به پایان سفرشان رسیدند، راننده از آنها خواست که کرایه شان را پرداخت کنند. گاو کرایه خودش را پرداخت.</p>
+<p dir="rtl">وَقتی آنها به پایانِ سَفَرِشان رِسیدند، رانَنده اَز آنها خواست که کِرایه شان را پَرداخت کُنَند. گاو کِرایه خودَش را پَرداخت کَرد.</p>
 
 <div class="pagenum">2</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
 
-<p dir="rtl">سگ کمی کرایه ی بیشتری داد، چون به همان اندازه پول نداشت.</p>
+<p dir="rtl">سَگ کَمی کِرایه یِ بیشتَری داد، چون بِه هَمان اَندازِه پول نَداشت.</p>
 
 <div class="pagenum">3</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
 
-<p dir="rtl">راننده قصد داشت پول سگ را به او بدهد وقتی که دید بزغاله بدون پرداخت ذره ای کرایه فرار کرد.</p>
+<p dir="rtl">رانَندِه قَصد داشت پولِ سَگ را بِه او بِدَهَد که دید بُزغالِه بِدون پَرداختِ ذَرّه ای کِرایه فَرار کَرد.</p>
 
 <div class="pagenum">4</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
 
-<p dir="rtl">راننده خیلی دلخور شد. بدون اینکه بقیه پول سگ را پس دهد رفت.</p>
+<p dir="rtl">رانَندِه خِیلی دِلخور شُد. بِدونِ اینکه بَقیهی پولِ سَگ را پَس دَهَد رَفت.</p>
 
 <div class="pagenum">5</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
 
-<p dir="rtl">به همین دلیل، حتی امروز، سگ به سمت ماشین دوید تا دزدکی به داخل ماشین نگاه کند و راننده ای را که به پول بدهکار بود را پیدا کند.</p>
+<p dir="rtl">بِه هَمین دَلیل، حَتی اِمروز، سَگ بِه سَمتِ ماشین دَوید تا دُزدَکی بِه داخِلِ ماشین نِگاه کُنَد وَ رانَندِه ای را کِه به او پول بِدِهکار بود را پِیدا کُنَد.</p>
 
 <div class="pagenum">6</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
 
-<p dir="rtl">بزغاله از صدای ماشین فرار کرد. او ترسید به خاطر کرایه ندادنش تحت تعقیب باشد.</p>
+<p dir="rtl">بُزغالِه اَز صِدایِ ماشین فَرار کَرد. او تَرسید به خاطِرِ کِرایه نَدادَنَش تَحتِ تَعقیب باشَد.</p>
 
 <div class="pagenum">7</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
 
-<p dir="rtl">گاو وقتی ماشینی می آمد اذیت نمی شد. گاو وقتش را صرف عبور از خیابان می کرد چون می دانست که او کرایه اش را کامل پرداخت کرده است.</p>
+<p dir="rtl">گاو وَقتی ماشینی میامَد اَذیَت نِمیشُد. گاو وَقتَش را صَرفِ عُبور اَز خیابان می کَرد چون میدانِست کِه او کِرایه اَش را کامِل پَرداخت کَردِه اَست.</p>
 
 <div class="pagenum">8</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
