--- a/stories/fa/0027_تصمیم-گیری_slides.html
+++ b/stories/fa/0027_تصمیم-گیری_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>تصمیم گیری - Global African Storybook</title>
+  <title>تَصمیم - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="تصمیم-گیری" class="slide level1">
-<h1 dir="rtl">تصمیم گیری</h1>
+<section id="تصمیم" class="slide level1">
+<h1 dir="rtl">تَصمیم</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
-<p dir="rtl">دهکده ی من مشکلات زیادی داشت. ما مجبور بودیم که برای برددن آب ازیک لوله در یک صف طولانی از یک لوله بایستیم.</p>
+<p dir="rtl">دِهکَده یِ مَن مُشکِلاتِ زیادی داشت. ما مَجبور بودیم کِه بَرایِ بُردَنِ آب اَزیِک لوله دَر یِک صَف طولانی بایستیم.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/03.jpg" /></p>
-<p dir="rtl">ما منتظر بخشش غذا از طرف دیگران بودیم.</p>
+<p dir="rtl">ما مُنتَظِرِ بَخششِ غَذا اَز طَرَفِ دیگران بودیم.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
-<p dir="rtl">ما در خانه هایمان را به خاطر دزدان زود قفل می کردیم.</p>
+<p dir="rtl">ما دَرِ خانههایِمان را بِه خاطِرِ دُزدان زود قُفل می کَردیم.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
-<p dir="rtl">خیلی از بچه ها از مدسه محروم می ماندند.</p>
+<p dir="rtl">خِیلی اَز بَچهها اَز مَدرِسه مَحروم میماندَند.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/06.jpg" /></p>
-<p dir="rtl">دختران جوان به عنوان پیشخدمت در روستاهای دیگر کار می کردند.</p>
+<p dir="rtl">دُختَرانِ جَوان به عُنوانِ پیشخِدمَت دَر روستاهایِ دیگر کار میکَردَند.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/07.jpg" /></p>
-<p dir="rtl">پسران جوان در اطراف دهکده پرسه می زدند در حالیکه دیگران روی زمین های کشاورزی دیگران کار می کردند.</p>
+<p dir="rtl">پِسَرانِ جَوان دَر اَطراف دِهکَدِه پَرسِه میزَدَند دَر حالیکِه دیگران رویِ زَمین هایِ کِشاوَرزیِ مَردُم کار میکَردَند.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/08.jpg" /></p>
-<p dir="rtl">وقتی که باد وزید، کاغذهای باطله روی درختان و حصارها آویزان می شدند.</p>
+<p dir="rtl">وَقتی که باد میوَزید، کاغَذهایِ باطِلِه رویِ دِرَختان وَ حِصارها آویزان میشُدَند.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
-<p dir="rtl">گاهی اوقات به خاطر خرده شیشه هایی که از روی بی احتیاطی روی زمین ریخته شده بود دست و پای مردم دچاربریدگی می شد.</p>
+<p dir="rtl">گاهی اوقات به خاطِر خُردِه شیشه هایی کِه اَز رویِ بی اِحتیاطی رویِ زَمین ریخته شُده بود دَست و پایِ مَردُم دُچارِبُریدگی میشُد.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
-<p dir="rtl">یک روز،آب لوله خشک شد و ظرفهای آب ما خالی ماند.</p>
+<p dir="rtl">یِک روز، آب لوله خُشک شُد وَ ظَرفهایِ آبِ ما خالی ماند.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
-<p dir="rtl">پدرم به تک تک خانه ها رفت و از مردم خواست که در جلسه ی دهکده شرکت کنند.</p>
+<p dir="rtl">پِدَرَم به تَک تَکِ خانه ها رَفت وَ اَز مَردُم خواست که دَر جَلسِه یِ دِهکَده شِرکَت کُنَند.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/12.jpg" /></p>
-<p dir="rtl">مردم زیریک درخت بزرگ جمع شدند وگوش کردند.</p>
+<p dir="rtl">مَردُم زیریِک دِرَختِ بُزُرگ جَمع شُدَند وَگوش کَردَند.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
-<p dir="rtl">پدرم ایستاد و گفت : ما نیاز داریم که با هم کار کنیم تا بتوانیم مشکلاتمان را حل کنیم.</p>
+<p dir="rtl">پِدَرَم ایستاد وَ گُفت: ما نیاز داریم که با هَم کار کُنیم تا بِتَوانیم مُشکِلاتِمان را حَل کُنیم.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
-<p dir="rtl">جومای هشت ساله، روی یک کنده ی درخت نشسته بود وداد زد : من میتوانم در نظافت کردن کمک کنم.</p>
+<p dir="rtl">جومایِ هَشت ساله، رویِ یِک کُنده یِ دِرَخت نِشَسته بود وَ داد زَد: مَن میتَوانَم دَر نِظافَت کَردَن کُمَک کُنَم.</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/15.jpg" /></p>
-<p dir="rtl">یک خانم گفت : زن ها می توانند درکاشتن محصولات غذایی با من همراهی کنند.</p>
+<p dir="rtl">یِک خانُم گُفت: زَنها میتَوانَند دَرکاشتنِ مَحصولاتِ غَذایی با مَن هَمراهی کُنَند.</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/16.jpg" /></p>
-<p dir="rtl">مرد دیگری ایستاد و گفت: مردها میتوانند چاه بکنند.</p>
+<p dir="rtl">مَردِ دیگر ایستاد و گفت: مَردها میتوانند چاه بکنند.</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
-<p dir="rtl">همه ما یک صدا فریاد زدیم : ما باید زندگیمان را تغییر دهیم. از آن روز به بعد همگی با هم کار کردیم تا مشکلاتمان را حل کنیم.</p>
+<p dir="rtl">هَمه ما یِک صِدا فَریاد زَدیم: ما باید زِندگیمان را تَغییر دَهیم. اَز آن روز به بَعد هَمِگی با هَم کار کَردیم تا مُشکِلاتِمان را حَل کُنیم.</p>
 <center>
 <strong>16</strong>
 </center>
@@ -240,7 +240,7 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" id="تصمیم-گیری-1">تصمیم گیری</h2>
+<h2 dir="rtl" id="تصمیم-1">تَصمیم</h2>
 <strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Vusi Malindi<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
 <p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
