--- a/stories/tr/0052_simbegwire_slides.html
+++ b/stories/tr/0052_simbegwire_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>چه کار داری میکنی‌؟ - Global African Storybook</title>
+  <title>Simbegwire - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="چه-کار-داری-میکنی" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">چه کار داری میکنی‌؟</h1>
+<section id="simbegwire" class="slide level1">
+<h1>Simbegwire</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p dir="rtl">من دارم آواز می‌خوانم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
+<p>Simbegwire annesi öldüğü zaman çok üzüldü. Simbegwire'ın babası, kızıyla ilgilenmek için elinden gelenin en iyisini yaptı. Zamanla, Simbegwire'ın annesi olmadan da mutlu olmayı öğrendiler. Her sabah oturdular ve önlerindeki gün hakkında konuştular. Her akşam, birlikte aksam yemeği hazırladılar. Bulaşıkları beraberce yıkadıktan sonra, Simbegwire'ın babası ona ev ödevlerinde yardım etti.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p dir="rtl">او دارد دست تکان میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
+<p>Bir gün, Simbegwire'ın babası normalden geç geldi eve. &quot;Neredesin çocuğum?&quot; diye seslendi. Simbegwire babasına koştu. Babasının bir kadının elini tuttuğunu görünce, olduğu yerde hareketsiz durdu. &quot;Seni özel biriyle tanıştırmak istiyorum, çocuğum. Bu Anita&quot; dedi babası gülümseyerek.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p dir="rtl">من دارم دست میزنم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
+<p>&quot;Merhaba Simbegwire, baban bana senin hakkında çok şey anlattı,&quot; dedi Anita. Ama gülümsemiyor veya Simbegwire'ın elini tutmuyordu. Simbegwire'ın babası mutlu ve heyecanlıydı. Üçünün birlikte yaşayacağını, ve hayatlarının nasıl güzel olacağını anlatıyordu. &quot;Çocuğum, umarım ki Anita'yı annen olarak kabul edersin.&quot; dedi babası.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p dir="rtl">او خودش را کش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
+<p>Simbegwire'ın hayatı değişti Artık sabahları babası ile birlikte oturmak için zamanı yoktu. Anita ona o kadar fazla ev işleri veriyordu ki, akşamları ev ödevlerini yapmak için çok yorgun oluyordu. Yemekten sonra direk yatağına gidiyordu. Onun tek rahatı annesinin ona verdiği renkli battaniyesi idi. Simbegwire'ın babası kızının mutsuz olduğunu fark etmiş görünmüyordu.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p dir="rtl">او صدا میزند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
+<p>Birkaç ay sonra, Simbegwire'ın babası onlara bir süreliğine evden uzaklaşacağını söyledi. &quot;İşimden dolayı seyahat etmem lazım.&quot; dedi babası. &quot;Ama biliyorum ki ikiniz birbirinizle ilgilenirsiniz.&quot; Simbegwire'ın yüzü düştü fakat babası fark etmedi. Anita hiç bir şey söylemedi. O da mutlu değildi.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p dir="rtl">من پاسخ می‌دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
+<p>Simbegwire için işler daha da kötüye gitti. Ev işlerini bitirmezse, veya şikayet ederse, Anita ona vuruyordu. Ve akşam yemeklerinde, kadın yemeğin çoğunu yerken, Simbegwire'a sadece birkaç lokma bırakıyordu. Her gece, Simbegwire uyumak için annesinin battaniyesine sarılıp kendi kendine ağlıyordu.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p dir="rtl">او گوش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
+<p>Bir sabah, Simbegwire yataktan kalkmak için geç kaldı. &quot;Seni tembel kız!&quot; diye bağırdı Anita. Simbegwire'ı yatağın dışına çekti. Değerli battaniye bir çiviye takıldı, ve ikiye yırtıldı.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p dir="rtl">تو داری چکار میکنی‌؟</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
+<p>Simbegwire çok üzgündü. Evden kaçmaya karar verdi. Annesinin battaniyesinin parçalarını aldı, biraz yemek paketledi, ve evden ayrıldı. Babasının ayrıldığı yolu takip etti.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,89 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="چه-کار-داری-میکنی-1">چه کار داری میکنی‌؟</h2>
-<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
+<p>Akşam olduğu zaman, akarsuyun yanındaki uzun bir ağaca tırmandı, ve kendi için dalların arasında bir yatak yaptı. Uykuya dalarken şarkı söyledi: &quot;Aanne, aanne, aanne, beni bıraktın. Beni bıraktın ve bir daha hiç geri dönmedin. Babam artık beni sevmiyor. Anne, ne zaman geri dönüyorsun? Beni bıraktın.&quot;</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
+<p>Ertesi sabah, Simbegwire şarkıyı tekrar söyledi. Kadınlar, kıyafetlerini yıkamak için akarsuya geldiklerinde, uzun ağaçtan gelen hüzünlü şarkıyı duydular. Onlar, sadece rüzgarın yaprakları salladığını düşündüler, ve işlerine devam ettiler. Ama kadınlardan biri şarkıyı çok dikkatlice dinledi.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
+<p>Bu kadın ağacın içine, yukarı doğru baktı. Kızı ve elindeki renkli battaniyeyi gördüğü zaman, bağırdı, &quot; Simbegwire, erkek kardeşimin çocuğu!&quot; Diğer kadın çamaşır yıkamayı bıraktı ve Simbegwire'a ağaçtan inmesine yardım etti. Halası küçük kızı kucakladı ve onu rahatlatmaya çalıştı.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
+<p>Simbegwire'ın halası, çocuğu kendi evine götürdü. Simbegwire'a sıcak yemek verdi, ve onu, annesinin battaniyesiyle birlikte yatağa yatırdı. O gece, Simbegwire uykuya dalarken ağladı. Fakat bunlar rahatlamanın gözyaşlarıydı. O biliyordu ki halası ona bakacaktı.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
+<p>Simbegwire'ın babası eve döndüğü zaman, kızının odasını boş buldu. &quot;Ne oldu Anita?&quot; diye buruk bir yürekle sordu. Kadın, Simbegwire'ın kaçtığını açıkladı. &quot;Ben ondan bana saygı duymasını istedim.&quot; dedi &quot;Ama belki çok serttim.&quot; Simbegwire'ın babası evi terk etti ve akarsu yönünde ilerledi. Eğer kız kardeşi Simbegwire'ı görmüşse öğrenmek için, kız kardeşinin köyüne kadar devam etti.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
+<p>Simbegwire babasını çok uzaktan gördüğünde, kuzenleriyle birlikte oynuyordu. Belki babası kızgın olabilir diye korktu, o yüzden saklanmak için evin içine koştu. Ama babası kızının yanına gitti ve dedi ki &quot;Simbegwire, sen kendin için mükemmel bir anne buldun. Seni seven ve anlayan biri. Seninle gurur duyuyor ve seni seviyorum.&quot; Onlar, Simbegwire'ın istediği kadar halasında kalabileceği konusunda anlaştılar.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
+<p>Babası onu her gün ziyaret etti. Uzun zaman sonra, babası Anita ile birlikte geldi. Anita, Simbegwire'ın ellerine uzandı. &quot;Çok üzgünüm ufaklık. Ben hatalıydım.&quot; diye ağladı. &quot;Tekrar denememe izin verir misin?&quot; Simbegwire babasına ve endişeli yüzüne baktı. Ardından, yavaşça ileriye doğru adım attı ve kollarını Anita'ya sardı.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
+<p>Bir sonraki hafta, Anita, Simbegwire'ı, halası ve kuzenleriyle birlikte eve yemeğe davet etti. Büyük bir ziyafetti! Anita Simbegwire'ın sevdiği tüm yiyecekleri hazırlamıştı, ve herkes doyana kadar yedi. Ardından, yetişkinler konuşurlarken, çocuklar oyun oynadılar. Simbegwire mutlu ve cesur hissetti. Yakın, çok yakın bir zamanda babası ve üvey annesi ile birlikte yaşamak için eve geri dönmeye karar verdi.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="simbegwire-1">Simbegwire</h2>
+<strong>Text:</strong> Rukia Nantale<br> <strong>Illustrations:</strong> Benjamin Mitchley<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> English<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/simbegwire'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
