--- a/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi_slides.html
+++ b/stories/tr/0110_bir-küçük-tohum-wangari-maathainin-hikayesi_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>چه کار داری میکنی‌؟ - Global African Storybook</title>
+  <title>Bir Küçük Tohum: Wangari Maathai'nin Hikayesi - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="چه-کار-داری-میکنی" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">چه کار داری میکنی‌؟</h1>
+<section id="bir-küçük-tohum-wangari-maathainin-hikayesi" class="slide level1">
+<h1>Bir Küçük Tohum: Wangari Maathai'nin Hikayesi</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p dir="rtl">من دارم آواز می‌خوانم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
+<p>Güney Afrika'da Kenya Dağı'nın eteklerindeki bir köyde, küçük bir kız annesiyle birlikte tarlalarda çalışırdı. Bu kızın adı Wangari idi.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p dir="rtl">او دارد دست تکان میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/03.jpg" /></p>
+<p>Wangari dışarıda olmayı çok severdi. Ailesinin yiyecek bahçesinde, büyük keskin bıçağıyla toprağı kazar, küçük tohumları sıcak toprağın içine bastırırdı.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p dir="rtl">من دارم دست میزنم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
+<p>Onun için günün favori zamanı, güneş batışından hemen sonrası idi. Hava bitkileri göremeyecek kadar çok karanlık olduğu zaman, Wangari eve gitme zamanının geldiğini anlardı. Eve giderken, tarlalar boyunca dar patikalardan geçer, nehirleri aşardı.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p dir="rtl">او خودش را کش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/05.jpg" /></p>
+<p>Wangari akıllı bir çocuktu ve okula gitmek için sabırsızlanıyordu. Fakat, annesi ve babası ondan evde kalmasını ve onlara yardım etmesini istiyorlardı. Yedi yaşına geldiğinde, büyük erkek kardeşi Wangari'nin okula gitmesi için ailesini ikna etti.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p dir="rtl">او صدا میزند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/06.jpg" /></p>
+<p>O, öğrenmeyi sevdi! Wangari, okuduğu her kitapla daha fazla, daha fazla şey öğrendi. Okulda o kadar iyiydi ki; Amerika Birleşik Devletlerin'de okumak için davet aldı. Wangari çok heyecanlanmıştı! O, dünya hakkında daha fazla şey bilmek istiyordu.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p dir="rtl">من پاسخ می‌دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
+<p>Amerika üniversitesinde, Wangari bir sürü yeni şeyler öğrendi. O, bitkiler ve bitkilerin nasıl yetişeceği alanında okudu. Ve nasıl büyüdüğünü anımsadı: erkek kardeşiyle güzel Kenya ormanlarının ağaçlarının gölgesinde oyunlar oynamalarını.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p dir="rtl">او گوش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/08.jpg" /></p>
+<p>Daha çok öğrendikçe daha da farkına vardı ki o Kenya'nın insanlarını çok seviyordu. Onların mutlu ve özgür olmalarını istiyordu. Daha çok şey öğrendikçe Afrikadaki evi hakkında daha çok şey hatırladı.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p dir="rtl">تو داری چکار میکنی‌؟</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/09.jpg" /></p>
+<p>Çalışmalarını bitirdiği zaman Kenya'ya döndü. Ama ülkesi değişmişti. Koca çiftlikler arazi boyunca uzatılmıştı. Kadınların yemek yapmak için ateş yakacak odunları yoktu. İnsanlar fakirdi, ve çocuklar açtı.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,53 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="چه-کار-داری-میکنی-1">چه کار داری میکنی‌؟</h2>
-<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/10.jpg" /></p>
+<p>Wangari ne yapacağını biliyordu. O, kadınlara tohum halinden ağaçları nasıl yetiştireceklerini öğretti. Kadınlar bu ağaçları sattılar, ve parayı ailelerine bakmak için kullandılar. Kadınlar çok mutlulardı. Wangari, onlara güçlü hissetmeleri için yardım etmişti.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/11.jpg" /></p>
+<p>Zaman geçtikçe, ormanda yeni ağaçlar büyüdü, ve nehir tekrar akmaya başladı. Wangari'nin mesajı Afrika boyunca yayıldı. Bugün, milyonlarca ağaç, Wangari'nin tohumlarından büyümekte.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/12.jpg" /></p>
+<p>Wangari çok çalıştı. Dünyanın her yerindeki insanlar bunu dikkate aldılar, ve ona çok ünlü bir ödül verdiler. Bu ödül Nobel Barış Ödülü olarak adlandırılıyor, ve Wangari bu ödülü almış ilk Afrikalı kadındı.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/13.jpg" /></p>
+<p>Wangari 2011 de öldü, ama biz onu güzel bir ağaç gördüğümüz her zaman anımsayabiliriz.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="bir-küçük-tohum-wangari-maathainin-hikayesi-1">Bir Küçük Tohum: Wangari Maathai'nin Hikayesi</h2>
+<strong>Text:</strong> Nicola Rijsdijk<br> <strong>Illustrations:</strong> Maya Marshak<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> English<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
