--- a/stories/zh/0006_阿南西和智慧_slides.html
+++ b/stories/zh/0006_阿南西和智慧_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
-<p>很久很久以前，人们什么都不知道。 他们不知道怎么耕田织布，也不知道怎么制造铁器。 天上的尼亚美神把世界所有的智慧都藏在一个沙锅里面。</p>
+<p>很久很久以前，人们什么都不知道。 他们不知道怎么耕田织布，也不知道怎么制造铁器。 天上的尼亚美神把世界所有的智慧都藏在一个砂锅里面。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
-<p>有一天，尼亚美决定把藏有智慧的沙锅交给蜘蛛神阿南西。 每当阿南西揭开砂锅往里看，他就会学到新的东西。他感到很兴奋！</p>
+<p>有一天，尼亚美决定把藏有智慧的砂锅交给蜘蛛神阿南西。 每当阿南西揭开砂锅往里看，他就会学到新的东西。他感到很兴奋！</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
-<p>贪心的阿南西跟自己说， “我把砂锅安放在树顶上，那样所有的智慧就都只属于我了！” 所以，他织出了一条长长的丝线，把沙锅牢牢地拴住，然后把丝线的另一端系在自己的肚子上。 他开始往那棵树上爬， 可是砂锅总是撞到他的腿，爬起来很辛苦。</p>
+<p>贪心的阿南西跟自己说， “我把砂锅安放在树顶上，那样所有的智慧就都只属于我了！” 所以，他织出了一条长长的丝线，把砂锅牢牢地拴住，然后把丝线的另一端系在自己的肚子上。 他开始往那棵树上爬， 可是砂锅总是撞到他的腿，爬起来很辛苦。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
-<p>阿南西的儿子在树底下看到了一切。 他跟阿南西说，“把沙锅扛在背上不就容易了吗？” 于是阿南西就试着把沙锅扛在背上，果然容易很多。</p>
+<p>阿南西的儿子在树底下看到了一切。 他跟阿南西说，“把砂锅扛在背上不就容易了吗？” 于是阿南西就试着把砂锅扛在背上，果然容易很多。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
-<p>阿南西很快就爬到树顶上。 可是他突然想到一个问题： “拥有所有智慧的人应该是我，可是刚才我儿子居然比我还聪明！” 阿南西气得差点跳起来了，一气之下竟把沙锅扔到树下。</p>
+<p>阿南西很快就爬到树顶上。 可是他突然想到一个问题： “拥有所有智慧的人应该是我，可是刚才我儿子居然比我还聪明！” 阿南西气得差点跳起来了，一气之下竟把砂锅扔到树下。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
-<p>沙锅一落地就碎成小片。 砂锅碎了，所有的智慧也跑了出来，大家可以自由分享了。 就是这样，世上的人们才学会如何耕田、如何织布，如何打铁做铁器，还有所有现在人会做的一切。</p>
+<p>砂锅一落地就碎成小片。 砂锅碎了，所有的智慧也跑了出来，大家可以自由分享了。 就是这样，世上的人们才学会如何耕田、如何织布，如何打铁做铁器，还有所有现在人会做的一切。</p>
 <center>
 <strong>6</strong>
 </center>
